--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.7.0"
-  }
+    "i": "^0.3.7",
+    "jest": "^29.7.0",
+    "pre-commit": "^1.2.2"
+  },
+  "pre-commit":[
+    "test"
+  ]
 }
