--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "husky": "^8.0.3",
     "i": "^0.3.7",
-    "jest": "^29.7.0",
-    "pre-commit": "^1.2.2"
+    "jest": "^29.7.0"
   },
-  "pre-commit":[
-    "test"
-  ]
+  "husky": {
+    "hooks": {
+      "pre-commit":"npm test"
+    }
+}
 }
